--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ SLACK_BOT_TOKEN='xoxb-6934413696737-7019827839923-H9uPGy2dXfpnxFx2vVDEROd9'
 
 FLASK_SECRET_KEY=b'\xba\xaa\xeei\x85\x1a\x9a\xdd\xf5\xf1\x91\x9dm(\xee\x9d\x9d\xd6\t\x87o\xad,7'
 
-MONGO_URI='mongodb+srv://josh:joshrobertson@slack-bot.kwdds2m.mongodb.net/'
+MONGO_URI='mongodb+srv://josh:joshrobertson@slack-bot.kwdds2m.mongodb.net/?retryWrites=true&w=majority&appName=slack-bot'
