--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,5 @@ services:
   web:
     build: .
     ports:
-      - "5000:5000"
-    environment:
-      FLASK_APP: wsgi.py
-    command: python wsgi.py
+      - "8000:8000"
+    command: gunicorn -b 0.0.0.0:8000 wsgi:app
