--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
-version: '3.8'
-
+version: '3.9'
 services:
-  web:
+  flask-app:
     build: .
     ports:
-      - "8000:8000"
-    command: gunicorn -b 0.0.0.0:8000 wsgi:app
+      - "5000:5000"
+    env_file:
+      - .env
+    command: python app.py
+    volumes:
+      - .:/app
