--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      FLASK_ENV: development
+      FLASK_ENV: production
     volumes:
       - .:/app
-    command: python wsgi.py
+    command: gunicorn -w 4 -b 0.0.0.0:5000 wsgi:app
