--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       FLASK_SECRET_KEY: '\xba\xaa\xeei\x85\x1a\x9a\xdd\xf5\xf1\x91\x9dm(\xee\x9d\x9d\xd6\t\x87o\xad,7'
     volumes:
       - .:/app
-    command: gunicorn -w 4 -b 0.0.0.0:5000 wsgi:app
+    command: gunicorn -w 4 -b 0.0.0.0:5000  --log-level debug wsgi:app
